# Efficient-DPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  temp
cuda/: .depend  CMakeLists.txt  Makefile  gather  gather.cu  gather.out  mem_access  mem_access.cu  mem_cpy  mem_cpy.cu  mem_mul.cu  nohup.out  params.h  radixSortCUB.cu  scanCUB  scanCUB.cu  scanThrust  scanThrust.cu  scatter  scatter.cu  skalnsky_scan  skalnsky_scan.cu  split_blocks.cu  split_threads  split_threads.cu  test.cu  test.ptx  test_bandwidth.cu  test_gather.cu  test_scan.cu  test_scatter.cu  test_split.cu
cuda/cub/cub/: util_type.cuh
cuda/cub/experimental/: histogram_compare.cu  spmv_compare.cu
cuda/cub/test/: test_block_histogram.cu  test_block_load_store.cu  test_block_radix_sort.cu  test_block_reduce.cu  test_block_scan.cu  test_device_histogram.cu  test_device_radix_sort.cu  test_device_reduce.cu  test_device_reduce_by_key.cu  test_device_run_length_encode.cu  test_device_scan.cu  test_device_select_if.cu  test_device_select_unique.cu  test_grid_barrier.cu  test_iterator.cu  test_warp_reduce.cu  test_warp_scan.cu
cuda/cub/tune/: tune_device_reduce.cu
cuda/inc/: .tags  dataDef.h  kernels.h  test.h  utility.h
cuda/kernels/: gather.cu  map.cu  mem.cu  radixSort.cu  scan.cu  scather.cu  split.cu
cuda/others/: radixSortCUB.cu  scatter.cu  split_threads.cu
cuda/others/inc/: kernels.h
cuda/others/kernels/: bisort.cu  mem.cu  split.cu
cuda/others/src/: testBisort.cpp  testRadixSort.cpp
cuda/src/: main.cpp  testBasic.cpp  testBisort.cpp  testGather.cpp  testMap.cpp  testRadixSort.cpp  testScan.cpp  testScan.cu  testScatter.cpp  testSplit.cpp  utility.cpp
cuda/util/: cuda_base.cuh  log.h  utility.cuh
cuda/util/cuda_fake/: fake.h
opencl/: CMakeLists.txt  Makefile  README.txt  assembly.ass  assembly_double.ass  nohup.out  nohup.out.cpu  nohup.out.mic  params.h  primitives.h  tbs528642971.tb6  types.h
opencl/Impl/: gatherImpl.cpp  nphjImpl.cpp  phjImpl.cpp  scanImpl.cpp  scatterImpl.cpp  splitImpl.cpp
opencl/Kernels/: CPU_gatherKernel.cl  CPU_scatterKernel.cl  MIC_gatherKernel.cl  MIC_scatterKernel.cl  atomicKernel.cl  barrierKernel.cl  bitonicSortKernel.cl  gatherKernel.cl  gather_kernel.cl  hjKernel.cl  hjNonPartitionedKernel.cl  hjPartitionedKernel.cl  hj_partitioned_kernel.cl  inljKernel.cl  latencyKernel.cl  mapKernel.cl  memKernel.cl  mem_kernel.cl  scanKernel.cl  scan_kernel.cl  scan_rss_kernel.cl  scan_rss_single_kernel.cl  scatterKernel.cl  splitKernel.cl  split_kernel.cl  vpuKernel.cl
opencl/gpuqp_opencl/: Makefile  README.txt
opencl/gpuqp_opencl.xcodeproj/: project.pbxproj
opencl/gpuqp_opencl/Kernels/: bitonicSortKernel.cl  gatherKernel.cl  mapKernel.cl  ninljKernel.cl  radixSortKernel.cl  scanKernel.cl  scatterKernel.cl  smjKernel.cl  splitKernel.cl
opencl/gpuqp_opencl/inc/: CSSTree.h  DataUtil.h  Foundation.h  KernelProcessor.h  bisortImpl.h  dataDef.h  dataDefinition.h  gatherImpl.h  gpuqpHeaders.h  hjImpl.h  inljImpl.h  mapImpl.h  ninljImpl.h  radixSortImpl.h  scanImpl.h  scatterImpl.h  smjImpl.h  splitImpl.h  testJoins.h  testPrimitives.h
opencl/inc/: CSSTree.h  DataDef.h  DataDef_CL.h  DataUtil.h  Foundation.h  KernelProcessor.h  Plat.h  PlatInit.h  dataDef.h  general.h  params.h  utility.h
opencl/kernels/: gather_kernel.cl  mem_kernel.cl  scan_global_RSS_kernel.cl  scan_global_RSS_single_kernel.cl  scan_global_chain_kernel.cl  scan_kernel.cl  scan_local.cl  scan_local_kernel.cl  scan_rss_single_kernel.cl  scatter_kernel.cl  split_kernel.cl
opencl/log/split/: WG_MIC_keys.out  WG_reorder_CPU_keys.out  WI_MIC_keys.out  WI_MIC_kvs.out
opencl/others/: compile.sh  hj_non_partitioned_kernel.cl  phjImpl.cpp  test.cpp
opencl/primitives/: gatherImpl.cpp  scanImpl.cpp  scatterImpl.cpp  splitImpl.cpp
opencl/r010ge/: r010ge.amplxe
opencl/r010ge/config/: analysis_type.cfg  context_values.cfg  runsa.options  state.cfg  viewpoint.cfg  viewpoint_processed.cfg
opencl/r010ge/data.0/: sep7f8749516700.20160809T140751.837925.tb6  systemcollector-gpu-ib-23.sc  userapicollector-33333-e234f226-33333-e2363add.th  userapicollector-33333-e234f226-33388-e2395798.th  userapicollector-33333-e234f226-33401-cb0222ba.th  userapicollector-33333-e234f226-33402-cb0222de.th  userapicollector-33333-e234f226-33403-cb27922e.th  userapicollector-33333-e234f226-33404-cb301b51.th  userapicollector-33333-e234f226-33405-cb2c5c62.th  userapicollector-33333-e234f226-33406-cb2c343f.th  userapicollector-33333-e234f226-33407-cb24687a.th  userapicollector-33333-e234f226-33408-cb2d4f35.th  userapicollector-33333-e234f226-33409-cb2bcc04.th  userapicollector-33333-e234f226-33410-cb2a6e5e.th  userapicollector-33333-e234f226-33411-cb272499.th  userapicollector-33333-e234f226-33412-cb2a4369.th  userapicollector-33333-e234f226-33413-cb301441.th  userapicollector-33333-e234f226.trace  (+1 more)
opencl/r011ah/: r011ah.amplxe
opencl/r012ah/: r012ah.amplxe  runtool.47561.ipc
opencl/r013ah/: r013ah.amplxe  runtool.51030.ipc
opencl/scripts/: assembly.ass  gather_scatter.sh
opencl/test/: main.cpp  testScanLocalSchemes.cpp  test_access.cpp  test_access_wg.cpp  test_bandwidth.cpp  test_gather.cpp  test_scan_global.cpp  test_scan_local.cpp  test_scatter.cpp  test_split.cpp
opencl/util/: Plat.cpp  Plat.h  general.cpp  general.h  opencl_fake.h  openmp_fake.h  testBasic.cpp  testJoins.cpp  testPrimitives.cpp  utility.cpp  utility.h
openmp/: CMakeLists.txt  Makefile  gather_scatter_CPU  gather_scatter_CPU.cpp  gather_scatter_MIC  gather_scatter_MIC.cpp  mem_cpy.cpp  mem_cpy_cpu  mem_cpy_mic  mem_cpy_mic_ss  mul_omp.cpp  mul_omp_cpu  nohup.out  params.h  scanOMP  scanOMP.cpp  scanOMP_mic  scanOMP_mic.cpp  scanTBB  scanTBB.cpp  scanTBB_mic  scanTBB_mic.cpp  scan_omp.cpp  scan_omp_cpu  scan_omp_mic  scan_tbb.cpp  scan_tbb_cpu  scan_tbb_mic  splitOMP.cpp  test_bandwidth_CPU.cpp  test_gather_scatter_CPU.cpp  test_scan_CPU.cpp
openmp/inc/: functions.h
openmp/r000ah/: r000ah.amplxe
openmp/src/: gather.cpp  main.cpp  map.cpp  mem.cpp  radixSort.cpp  scan.cpp  scatter.cpp  vpu.cpp
openmp/util/: utility.cpp  utility.h
(+194 files in other folders)
