cmake_minimum_required(VERSION 3.9)
project(comparison_gpu)

set(CMAKE_CXX_STANDARD 11)

include_directories(opencl/util)

add_executable(comparison_gpu
        common/utility.cpp
        common/utility.h
        cuda/cub/experimental/histogram/histogram_cub.h
        cuda/cub/experimental/histogram/histogram_gmem_atomics.h
        cuda/cub/experimental/histogram/histogram_smem_atomics.h
        cuda/cub/experimental/sparse_matrix.h
        cuda/cub/test/half.h
        cuda/cub/test/link_main.cpp
        cuda/cub/test/mersenne.h
        cuda/cub/test/test_util.h
        cuda/inc/dataDef.h
        cuda/inc/kernels.h
        cuda/inc/test.h
        cuda/kernels/bisort.cu
        cuda/kernels/map.cu
        cuda/kernels/mem.cu
        cuda/kernels/radixSort.cu
        cuda/kernels/scan.cu
        cuda/kernels/split.cu
        cuda/src/main.cpp
        cuda/src/testBasic.cpp
        cuda/src/testBisort.cpp
        cuda/src/testRadixSort.cpp
        cuda/src/testSplit.cpp
        cuda/gather.cu
        cuda/Makefile
        cuda/mem_cpy.cu
        cuda/mem_mul.cu
        cuda/radixSortCUB.cu
        cuda/scanCUB.cu
        cuda/scanThrust.cu
        cuda/scatter.cu
        cuda/split_blocks.cu
        cuda/split_threads.cu
        opencl/CL/cl.h
        opencl/CL/cl.hpp
        opencl/CL/cl_egl.h
        opencl/CL/cl_ext.h
        opencl/CL/cl_gl.h
        opencl/CL/cl_gl_ext.h
        opencl/CL/cl_platform.h
        opencl/CL/opencl.h
        opencl/primitives/gatherImpl.cpp
        opencl/others/nphjImpl.cpp
        opencl/others/phjImpl.cpp
        opencl/primitives/scanImpl.cpp
        opencl/primitives/scatterImpl.cpp
        opencl/primitives/splitImpl.cpp
        opencl/kernels/gather_kernel.cl
        opencl/others/hj_non_partitioned_kernel.cl
        opencl/others/hj_partitioned_kernel.cl
        opencl/kernels/mem_kernel.cl
        opencl/kernels/scan_local_kernel.cl
        opencl/kernels/scan_global_RSS_kernel.cl
        opencl/kernels/scan_global_RSS_single_kernel.cl
        opencl/kernels/scatter_kernel.cl
        opencl/kernels/split_kernel.cl
        opencl/test/test_scan_local.cpp
        opencl/primitives.h
        opencl/util/log.cpp
        opencl/util/log.h
        opencl/util/opencl_fake.h
        opencl/util/Plat.cpp
        opencl/util/Plat.h
        opencl/util/utility.cpp
        opencl/util/utility.h
        opencl/CMakeLists.txt
        opencl/params.h
        openmp/inc/functions.h
        openmp/src/gather.cpp
        openmp/src/latency.cpp
        openmp/src/main.cpp
        openmp/src/map.cpp
        openmp/src/mem.cpp
        openmp/src/radixSort.cpp
        openmp/src/scan.cpp
        openmp/src/scatter.cpp
        openmp/src/vpu.cpp
        openmp/gather_scatter_CPU.cpp
        openmp/gather_scatter_MIC.cpp
        openmp/mem_cpy.cpp
        openmp/mul_omp.cpp
        openmp/scan_omp.cpp
        openmp/scan_tbb.cpp
        openmp/split_omp.cpp)
