cmake_minimum_required(VERSION 3.9)
project(comparison_gpu)

set(CMAKE_CXX_STANDARD 11)

include_directories(opencl/util)
include_directories(cuda/util)
include_directories(cuda/cub)

add_executable(comparison_gpu
        common/utility.cpp
        common/utility.h
        cuda/test_gather.cu
        cuda/test_bandwidth.cu
        obsolete/CUDA/radixSortCUB.cu
        cuda/test_scan.cu
        obsolete/CUDA/scanThrust.cu
        obsolete/CUDA/scatter.cu
        cuda/test_split.cu
        obsolete/CUDA/split_threads.cu
        opencl/CL/cl.h
        opencl/CL/cl.hpp
        opencl/CL/cl_egl.h
        opencl/CL/cl_ext.h
        opencl/CL/cl_gl.h
        opencl/CL/cl_gl_ext.h
        opencl/CL/cl_platform.h
        opencl/CL/opencl.h
        opencl/primitives/gatherImpl.cpp
        obsolete/OpenCL/nphjImpl.cpp
        obsolete/OpenCL/phjImpl.cpp
        opencl/primitives/scanImpl.cpp
        opencl/primitives/scatterImpl.cpp
        opencl/primitives/splitImpl.cpp
        opencl/kernels/gather_kernel.cl
        obsolete/OpenCL/hj_non_partitioned_kernel.cl
        obsolete/OpenCL/hj_partitioned_kernel.cl
        opencl/kernels/mem_kernel.cl
        opencl/kernels/scan_local_kernel.cl
        opencl/kernels/scan_global_RSS_kernel.cl
        opencl/kernels/scan_global_RSS_single_kernel.cl
        opencl/kernels/scatter_kernel.cl
        opencl/kernels/split_kernel.cl
        opencl/test/test_scan_local.cpp
        opencl/primitives.h
        opencl/util/log.cpp
        opencl/util/log.h
        opencl/util/opencl_fake.h
        opencl/util/Plat.cpp
        opencl/util/Plat.h
        opencl/util/utility.cpp
        opencl/util/utility.h
        opencl/CMakeLists.txt
        opencl/params.h
        openmp/inc/functions.h
        openmp/src/gather.cpp
        openmp/src/latency.cpp
        openmp/src/main.cpp
        openmp/src/map.cpp
        openmp/src/mem.cpp
        openmp/src/radixSort.cpp
        openmp/src/scan.cpp
        openmp/src/scatter.cpp
        openmp/src/vpu.cpp
        openmp/test_gather_scatter_CPU.cpp
        openmp/gather_scatter_MIC.cpp
        openmp/test_bandwidth_CPU.cpp
        openmp/mul_omp.cpp
        openmp/scan_omp.cpp
        openmp/scan_tbb.cpp
        openmp/split_omp.cpp)
